# isaric

./: .gitignore  README.md  pyproject.toml  requirements.txt  template_parser.toml
.github/workflows/: autoparser.yml  parser-coverage.yml  parsers.yml  schemas.yml  scripts.yml  tests.yml
autoparser/: README.md  a.md  autoparser-config.schema.json  config.json  config.toml  csv_mapping.py  isaric-bak.toml  isaric.toml  make_toml.py  pyproject.toml  redcap-en.toml  requirements.txt
autoparser/autoparser/: __main__.py  csv_mapping.py  make_toml.py  toml_writer.py  util.py
autoparser/autoparser/config/: redcap-en.toml
autoparser/tests/: isaric-observation.csv  isaric-subject.csv  isaric-visit.csv  test_make_toml.py
autoparser/tests/__snapshots__/: test_make_toml.ambr
ci/: parser-coverage.sh  requirements.txt  validate_parser.py
docs/: guide.md  guide.rst  spec-format.md
fhir/: ethnic_grouping_sdtm_isaric.py  fhir2flat.py  fhir_export.py  fhir_export_isaric.py
fhir/codes/: LB_LBSPEC_snomed_codes.csv  LB_LBTEST_snomed_codes.csv  RP_PO_mappings.csv  SA_complications_SS_codes.csv  SA_history_codes.csv  SDTM HO FHIR.csv  SDTM MB FHIR.csv  SDTM PO FHIR.csv  SDTM RP FHIR.csv  SDTM RS FHIR.csv  SDTM SC FHIR.csv  VS_mappings.csv  vital_signs_sdtm.csv
fhir/resource_structure_dev/: condition.json  encounter.json  medication_administration.json  observation.json  organization.json  patient.json  procedure.json  research_study.json  research_subject.json  specimen.json
generator/: base-parser-empty.toml  base-parser.toml  home.py  isaric-ccpuk.toml  structures.py  webapp.py  webapp_attributes.py
generator/forms/: observation.py  structures.py  view_table.py  visit_subject.py
generator/pages/: 1-subject.py  2-visit.py  3-observations.py  4-single_field_generator.py
inventory/: README.md  data.csv  inventory.py  requirements.txt
isaric/: parser.py  pydantic_types.py  schemas.py
parsers/: isaric-western-australia.toml
qc/: pregnancy.py
scripts/: README.md  data_summary.py  relsub.py  test_data.csv  test_data_summary.py  test_relsub.py
templates/: template_parser.toml
tests/: test_example.py  test_parser.py  test_pydantic_types.py
(+96 files in other folders)
