[tool.poetry]
name = "isaric"
version = "0.1.0"
description = "ISARIC Clinical Data Model"
authors = ["Abhishek Dasgupta <abhishek.dasgupta@dtc.ox.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pandas = "^1.4.4"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
